k8s.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fedlexplorer-backend
  labels:
    app: fedlexplorer
    component: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fedlexplorer
      component: backend
  template:
    metadata:
      labels:
        app: fedlexplorer
        component: backend
    spec:
      containers:
        - name: fedlexplorer-backend
          image: ghcr.io/ribeaud/fedlexplorer-backend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: fedlexplorer-backend
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8000
  selector:
    app: fedlexplorer
    component: backend
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tls-ing
  namespace: bk-fedlexplorer-dev
  labels:
    karakun.com/project: bundeskanzlei
    karakun.com/app: fedlexplorer
    karakun.com/env: dev
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: 20M
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - bk-fedlexplorer-dev.k8s.karakun.com
      secretName: ssl-secret
  rules:
    - host: bk-fedlexplorer-dev.k8s.karakun.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fedlexplorer-backend
                port:
                  number: 8080
